--- a/resources/ingresses.yaml
+++ b/resources/ingresses.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: foundry
   annotations:
     external-dns.alpha.kubernetes.io/hostname: vtt.crt.lol
-    external-dns.alpha.kubernetes.io/target: vtt.crt.lol
+    external-dns.alpha.kubernetes.io/target: crt.lol
 spec:
   ingressClassName: nginx-external
   rules:
