--- a/resources/services.yaml
+++ b/resources/services.yaml
@@ -4,12 +4,12 @@ kind: Service
 metadata:
   name: foundry
   namespace: foundry
+  labels:
+    app: foundry
 spec:
   type: ClusterIP
   ports:
-  - port: 30000
-    targetPort: http
-    protocol: TCP
-    name: http
+    - port: 30000
+      targetPort: foundry
   selector:
     app: foundry
