--- a/resources/deployments.yaml
+++ b/resources/deployments.yaml
@@ -15,6 +15,8 @@ spec:
       labels:
         app: foundry
     spec:
+      securityContext:
+        fsGroup: 1000
       containers:
       - name: foundry
         image: foundry
